test/apps/basics/src/routes/errors/preload-server.svelte
<script context="module">
	export async function preload() {
		throw new Error('Crashing now');
	}
</script>
